--- a/client/styles.css
+++ b/client/styles.css
@@ -1,15 +1,21 @@
 body {
-  background-image: url("./resources/garden-1515380_1920.jpg");
+  background-image: url("./resources/bamboo-watercolor2.png");
   background-size: 100% auto;
-  color: white;
+  color: black;
+  margin: auto 20em;
+  font-family:'P22 TaiChi W00 Regular';
 }
 
-
+.logo {
+  text-align: right;
+  font-size: 4em;
+  /*font-family:'Japanese Brush Master W00 Rg';*/
+}
 
 /*Timer Styles:*/
 div.timer {
   border-radius:.5em;
-  background-color: rgba(100, 100, 100, .3);
+  background-color: rgba(100, 100, 100, .35);
   margin: 1em;
   padding: 1em;
 }
@@ -21,12 +27,13 @@ div.timer {
   height: 1em;
   margin: .5em 1em;
   padding: 1em;
-  -webkit-transition: background-color .5s; /* Safari */
-  transition: background-color .5s;
+  -webkit-transition: background-color .25s; /* Safari */
+  transition: background-color .25s;
+  background-color: rgba(100, 100, 100, .35);
 }
 
 .button:hover {
-  background-color: rgba(100, 100, 100, .5);
-  -webkit-transition: background-color 1s; /* Safari */
-  transition: background-color 1s;
+  background-color: rgba(100, 100, 100, .6);
+  -webkit-transition: background-color .5s; /* Safari */
+  transition: background-color .5s;
 }
