Added audio, updated styling, revised some components

--- a/client/styles.css
+++ b/client/styles.css
@@ -1,39 +1,101 @@
 body {
-  background-image: url("./resources/bamboo-watercolor2.png");
-  background-size: 100% auto;
+  background: url("./resources/bamboo-watercolor2.png") no-repeat center center fixed;
+  background-size: cover;
   color: black;
-  margin: auto 20em;
   font-family:'P22 TaiChi W00 Regular';
 }
 
+/****** Logo Styles ******/
 .logo {
   text-align: right;
   font-size: 4em;
   /*font-family:'Japanese Brush Master W00 Rg';*/
 }
 
-/*Timer Styles:*/
-div.timer {
-  border-radius:.5em;
-  background-color: rgba(100, 100, 100, .35);
-  margin: 1em;
-  padding: 1em;
+/****** App Styles ******/
+.app {
+  max-width: 500px;
+  margin: 0 auto;
 }
 
+.controls {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+  /*background-color: rgba(100, 100, 100, .35);*/
 .button {
   display: inline-block;
-  border: 1px solid white;
+  border: 1px solid rgba(100, 100, 100, .35);
   border-radius: .5em;
-  height: 1em;
-  margin: .5em 1em;
   padding: 1em;
   -webkit-transition: background-color .25s; /* Safari */
   transition: background-color .25s;
-  background-color: rgba(100, 100, 100, .35);
+  background-color: transparent;
+  vertical-align: middle;
+}
+
+.buttonIncrement,
+.buttonDecrement,
+.buttonRemoveTimer {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 0px;
+  color: transparent;
+}
+
+.buttonDecrement:hover,
+.buttonIncrement:hover,
+.buttonRemoveTimer:hover {
+  transition: color .25s;
+  color: white;
+}
+
+.buttonIncrement {
+  background-image: url('../resources/singleKoiUpWhite.png');
+}
+.buttonIncrement:hover {
+  background-image: url('../resources/singleKoiUpBlack.png');
+  transition: background-image .25s;
+}
+.buttonDecrement {
+  background-image: url('../resources/singleKoiDownWhite.png');
+}
+.buttonDecrement:hover {
+  background-image: url('../resources/singleKoiDownBlack.png');
+  transition: background-image .25s;
 }
 
 .button:hover {
   background-color: rgba(100, 100, 100, .6);
-  -webkit-transition: background-color .5s; /* Safari */
-  transition: background-color .5s;
+  -webkit-transition: background-color .25s; /* Safari */
+  transition: background-color .25s;
+}
+
+.buttonRemoveTimer {
+  background-image: url('../resources/void.png');
+}
+
+h1, p {
+  margin: 0;
+}
+
+  /*background-color: ;*/
+/****** Timer Styles: ******/
+.timer {
+  border-radius: .5em;
+  background: linear-gradient(transparent 5%, rgba(255, 255, 255, .35) 15%, rgba(255, 255, 255, .35) 85%, transparent 95%);
+  margin: 1em;
+  padding: 2em;
+}
+
+.durationControl {
+  display: flex;
+  justify-content: center;
+}
+
+.durationControl span {
+  margin: .5em;
 }
